--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-coffee": "^3.0.2",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.6.1",
     "gulp-util": "^3.0.8",
     "jquery": "^3.3.1",
     "mustache": "^3.0.0"
