Minifying .json file

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.6.1",
     "gulp-if": "^2.0.2",
+    "gulp-jsonminify": "^1.1.0",
     "gulp-minify-html": "^1.0.6",
     "gulp-uglify": "^3.0.1",
     "gulp-util": "^3.0.8",
