--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.6.1",
     "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^4.1.0",
     "gulp-jsonminify": "^1.1.0",
     "gulp-minify-html": "^1.0.6",
     "gulp-uglify": "^3.0.1",
     "gulp-util": "^3.0.8",
+    "imagemin-pngcrush": "^5.1.0",
     "jquery": "^3.3.1",
     "mustache": "^3.0.0"
   },
